# aiforge-editor

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-min.txt  requirements-train.txt  requirements.txt
backend/aiforge/: __init__.py  config.py
backend/aiforge/ai/: __init__.py  chat.py  completion.py  diff.py  edit.py
backend/aiforge/api/: __init__.py  deps.py  middleware.py  schemas.py  server.py  services.py
backend/aiforge/api/routers/: __init__.py  ai.py  auth.py  files.py  rag.py  workspaces.py
backend/aiforge/db/: __init__.py  models.py  session.py
backend/aiforge/llm/: __init__.py  anthropic_backend.py  base.py  hf_backend.py  local_backend.py  mock_backend.py  resilient.py
backend/aiforge/ml/: README.md  __init__.py  config.py  data.py  eval.py  export_onnx.py  fim.py  generate.py  model.py  tokenizer.py  train.py  train_scaleup.py
backend/aiforge/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/aiforge/rag/: __init__.py  indexer.py
backend/aiforge/security/: __init__.py  passwords.py  ratelimit.py  tokens.py
backend/aiforge/workspace/: __init__.py  files.py  manager.py
backend/alembic/: env.py
backend/alembic/versions/: 7d382497444c_initial_schema.py
backend/runs/proof/: model_config.json  tokenizer.json
backend/tests/: conftest.py  test_ai.py  test_api.py  test_auth.py  test_diff.py  test_isolation.py  test_ml_fim.py  test_ml_integration.py  test_ml_local_backend.py  test_ml_model.py  test_rag.py  test_reliability.py  test_security.py  test_workspace.py
backend/tests/sample_project/: README.md
backend/tests/sample_project/src/: auth.py  calculator.py
deploy/helm/aiforge/: Chart.yaml  values.yaml
deploy/helm/aiforge/templates/: backend.yaml  frontend.yaml
deploy/k8s/: backend.yaml  data.yaml  frontend.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  language.ts  store.ts  styles.css
frontend/src/__tests__/: client.test.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  CommandBar.tsx  CommandPalette.tsx  DiffModal.tsx  EditorPane.tsx  FileTree.tsx  Login.tsx  Settings.tsx  StatusBar.tsx  Toasts.tsx  TopBar.tsx
