[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiforge"
version = "0.1.0"
description = "AI engine for the aiforge-editor: completions, codebase chat (RAG), and agentic diff-apply edits."
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = ["ai", "code-editor", "rag", "llm", "fastapi", "claude"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
hf = ["httpx>=0.27"]
embeddings = ["sentence-transformers>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27"]

[project.scripts]
aiforge-server = "aiforge.api.server:run_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# UP (pyupgrade) is intentionally omitted: the codebase keeps `typing.List`
# style and `from __future__ import annotations` for broad 3.9 compatibility.
select = ["E", "F", "I", "W"]
ignore = ["E501"]
