[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiforge"
version = "0.2.0"
description = "AI engine for the aiforge-editor: completions, codebase chat (RAG), agentic diff-apply edits, and a from-scratch code model."
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = ["ai", "code-editor", "rag", "llm", "fastapi", "claude", "transformer"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "email-validator>=2.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "tenacity>=8.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
hf = ["httpx>=0.27"]
embeddings = ["sentence-transformers>=2.2"]
train = ["torch>=2.2", "tokenizers>=0.15", "onnx>=1.15", "onnxruntime>=1.17"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.8", "bandit>=1.7", "pip-audit>=2.7", "httpx>=0.27"]

[project.scripts]
aiforge-server = "aiforge.api.server:run_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# UP (pyupgrade) is intentionally omitted: the codebase keeps `typing.List`
# style and `from __future__ import annotations` for broad 3.9 compatibility.
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["aiforge"]
omit = [
    # Network-only backends (can't run offline / in CI without keys).
    "aiforge/llm/anthropic_backend.py",
    "aiforge/llm/hf_backend.py",
    # Heavy ML training/serving pipeline — validated by REAL training runs and
    # the ml/model/fim unit tests, not by API-level coverage. Excluded from the
    # core coverage gate (torch is import-guarded; CI core path lacks torch).
    "aiforge/ml/train.py",
    "aiforge/ml/train_scaleup.py",
    "aiforge/ml/data.py",
    "aiforge/ml/generate.py",
    "aiforge/ml/eval.py",
    "aiforge/ml/export_onnx.py",
    "aiforge/ml/model.py",
    "aiforge/llm/local_backend.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
exclude = ["aiforge/ml/.*", "tests/.*"]

# numpy ships PEP 695 `type` statements in its py3.12 stubs, which mypy rejects
# under python_version = "3.9" (syntax error in numpy/__init__.pyi). We only
# type-check our own code, so skip following numpy (and its stubs) entirely.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "aiforge/ml"]
# Justified skips:
#  B101 assert_used   - asserts are used only for internal invariants.
#  B311 random        - non-crypto use (FIM document shuffling).
#  B104 bind_all      - 0.0.0.0 is the intended container default (override via env).
#  B110/B112 try/pass - intentional best-effort defensive paths (metrics,
#                       optional deps, rate-limit fallback) that must never
#                       break a request.
skips = ["B101", "B311", "B104", "B110", "B112"]
